--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="calculate">Calculate</string>
     <string name="reset">Reset</string>
     <string name="input_error">Input required</string>
+    <string name="bmiTotal"></string>
 </resources>
